--- a/keystore.properties
+++ b/keystore.properties
@@ -1,4 +1,4 @@
-STORE_PASSWORD=my_store_password
-KEY_PASSWORD=my_key_password
-KEY_ALIAS=alias_name
-storeFile=keyStore¿
+STORE_PASSWORD=N33X_M!us!c
+KEY_PASSWORD=N33X_M!us!c
+KEY_ALIAS=Music
+storeFile=release
